# El-Psy-Quant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: roadmap.md
docs/milestones/: milestone-001-research-pipeline-foundation.md  milestone-002-performance-and-local-data.md  milestone-003-data-reproducibility-and-research-workflow.md  milestone-004-research-experimentation-foundation.md  milestone-005-strategy-realism-foundation.md  milestone-006-risk-and-benchmark-foundation.md  milestone-007-multi-asset-research-foundation.md  milestone-008-research-operations-foundation.md
docs/sprints/: sprint-001-bootstrap-foundation.md  sprint-002-indicators-foundation.md  sprint-003-signal-foundation.md  sprint-004-position-foundation.md  sprint-005-strategy-return-foundation.md  sprint-006-equity-curve-foundation.md  (+31 more)
examples/: csv_research_example.py  minimal_research_example.py
tests/: test_backtesting_benchmarks.py  test_backtesting_experiments.py  test_backtesting_multi.py  test_backtesting_pipelines.py  test_backtesting_trades.py  test_backtesting_workflows.py  test_cli.py  test_config.py  test_csv_research_example.py  test_data_cache.py  test_data_csv.py  test_data_multi.py  test_data_workflows.py  test_examples.py  test_indicators_trend.py  test_outputs.py  test_performance_metrics.py  test_performance_summary.py  test_portfolio_costs.py  test_portfolio_equity.py  test_portfolio_positions.py  test_portfolio_returns.py  test_portfolio_slippage.py  test_portfolio_trades.py  test_project_import.py  test_signals_crossover.py  test_yahoo_finance_provider.py
(+33 files in other folders)
