[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "el-psy-quant"
version = "0.1.0"
description = "An AI-native quantitative research and trading platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

